--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <img class="img-fluid mb-5 d-block mx-auto" src="img/seattle_headshot.jpg" alt="">
       <h1 class="text-uppercase mb-0">Shannon Foster</h1>
       <br>
-      <h2>Full Sack Software Developer Engineer</h2>
+      <h2>Full Stack Software Developer Engineer</h2>
 
       <h2 class="font-weight-bold mb-0">Imagine - Design - Build</h2>
       <br>
